--- a/styles/global.css
+++ b/styles/global.css
@@ -127,8 +127,8 @@ body {
   padding-top: 120px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: black;
-  color: white;
+  background-color: white;
+  color: black;
   font-size: 18px;
 }
 
