--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -6,3 +6,26 @@
   width: 100%;
   margin: 0 auto;
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid black;
+  border-bottom-color: red;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  top: 45%;
+  left: 48%;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
