--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -1,14 +1,15 @@
 .nav {
-  background-color: #2d2d2d;
   position: fixed;
-  width: 30%;
+  width: 100%;
   margin: 0 auto;
-  top: 20px;
+  top: 0;
   border-radius: 50px;
-  padding: 20px 0px;
+  padding: 30px 0px;
   left: 50%;
   z-index: 10;
   transform: translateX(-50%);
+  background-color: white;
+  display: inline-block;
 }
 
 .nav ul {
@@ -17,12 +18,12 @@
   gap: 50px;
 }
 
+.nav ul span {
+  margin-right: 70vw;
+}
+
 .nav ul li {
   list-style: none;
   transform: none;
-  transition: all 0.1s ease-in-out;
-}
-
-.nav ul li:hover {
-  transform: scale(1.05);
+  text-decoration: none;
 }
