--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   top: 0;
   border-radius: 50px;
-  padding: 30px 0px;
+  padding: 40px 0px;
   left: 50%;
   z-index: 10;
   transform: translateX(-50%);
@@ -19,7 +19,8 @@
 }
 
 .nav ul span {
-  margin-right: 70vw;
+  margin-right: 59vw;
+  font-weight: 800;
 }
 
 .nav ul li {
