--- a/styles/movie-info.module.css
+++ b/styles/movie-info.module.css
@@ -1,8 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  gap: 50px;
-  width: 80%;
+  grid-template-columns: 1fr 1.5fr;
+  width: 62%;
   margin: 0 auto;
 }
 
@@ -12,8 +11,25 @@
   place-self: center;
 }
 
-.title {
-  color: white;
+.title1 {
+  max-width: 75%;
+  margin: auto;
+  margin-bottom: 30px;
+  font-size: 36px;
+  font-weight: 600;
+}
+
+.sub_title {
+  max-width: 75%;
+  margin: auto;
+  margin-bottom: 50px;
+  font-size: 30px;
+  font-weight: 600;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgb(222, 222, 222);
+}
+qkrwl .title2 {
+  color: black;
   font-size: 36px;
   font-weight: 600;
 }
@@ -21,8 +37,38 @@
 .info {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
-  gap: 20px;
+  gap: 30px;
+  padding: 25px;
+  border-radius: 20px;
+  border: 1px solid rgb(222, 222, 222);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  margin: auto;
+}
+
+.info h1 {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.info p {
+  line-height: 1.6;
+}
+
+.styled_button {
+  background-color: white;
+  border: 1px solid gray;
+  border-radius: 4px;
+  padding: 8px 12px;
+  margin-right: 10px;
+  font-size: 15px;
+}
+
+.styled_button a {
+  text-decoration: none;
+}
+
+.styled_button:hover {
+  background-color: rgb(225, 225, 225);
 }
 
 .loader {
