--- a/styles/home-layout.module.css
+++ b/styles/home-layout.module.css
@@ -8,10 +8,10 @@
   flex: 1;
 }
 
-.footer {
+/* .footer {
   padding: 200px 0px 50px 0px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: static;
-}
+} */
