--- a/styles/about-us.module.css
+++ b/styles/about-us.module.css
@@ -10,12 +10,42 @@
 
 .mainContainer {
   justify-content: center;
-  line-height: 50px;
+  line-height: 40px;
+  padding-left: 150px;
+  width: 80%;
 }
 
 .container {
-  padding: 40px 0;
+  margin-top: 100px;
+  padding: 50px 0;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.mainTitle {
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 50px;
+}
+
+.subTitle {
+  font-size: 35px;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(199, 199, 199);
+}
+
+.skillsIcon {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  align-items: center;
+}
+
+.linksIcon {
+  font-size: 50px;
+  margin-right: 15px;
 }
