--- a/styles/about-us.module.css
+++ b/styles/about-us.module.css
@@ -24,17 +24,16 @@
 }
 
 .mainTitle {
-  font-size: 50px;
+  font-size: 36px;
   font-weight: bold;
-  margin-bottom: 50px;
 }
 
 .subTitle {
-  font-size: 35px;
+  font-size: 25px;
   font-weight: bold;
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 15px;
-  padding-bottom: 15px;
+  padding-bottom: 5px;
   border-bottom: 1px solid rgb(199, 199, 199);
 }
 
@@ -42,10 +41,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
-  align-items: center;
 }
 
 .linksIcon {
-  font-size: 50px;
-  margin-right: 15px;
+  font-size: 45px;
+}
+
+.des {
+  font-size: 15px;
+  padding-left: 5px;
+  margin-right: 20px;
 }
