--- a/styles/movie-info.module.css
+++ b/styles/movie-info.module.css
@@ -16,7 +16,7 @@
   max-width: 80%;
   margin: auto;
   margin-bottom: 30px;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 600;
 }
 
@@ -24,12 +24,13 @@
   max-width: 80%;
   margin: auto;
   margin-bottom: 30px;
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 600;
   padding-bottom: 10px;
   border-bottom: 1px solid rgb(222, 222, 222);
 }
-qkrwl .title2 {
+
+.title2 {
   color: black;
   font-size: 36px;
   font-weight: 600;
