--- a/styles/movie-credits.module.css
+++ b/styles/movie-credits.module.css
@@ -12,5 +12,54 @@
   animation: rotation 1s linear infinite;
 }
 
+.title {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 40px;
+}
+
+.wrapper {
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 15px;
+  margin: auto;
+}
+
+.container {
+  width: 100%;
+  max-width: 200px;
+  height: 370px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #8c8c8c;
+  padding: 10px;
+  box-sizing: border-box;
+  line-height: 24px;
+  border-radius: 15px;
+}
+
 .profileImg {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 8px;
+  padding-bottom: 5px;
+}
+
+.name {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.c_name {
+  font-size: 15px;
+}
+.popular {
+  font-size: 15px;
 }
